[tool.poetry]
name = "bbb-py-rest"
version = "0.0.2"
description = "Rubix Beaglebond Black App"
authors = ["NubeDev <aidan@enviroservices.com.au>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.2.5"
gunicorn = "20.0.4"
adafruit-bbio = {git = "https://github.com/adafruit/adafruit-beaglebone-io-python", rev = "master"}
itsdangerous = "2.0.1"

[tool.poetry.dev-dependencies]
pyinstaller = "4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
